--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>can.App</title>
+  <title>SPA</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,700,500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="theme/font-awesome.css">
   <style type="text/css">
@@ -581,10 +581,121 @@ pre {
   </div>
 
   <div class="slide" id="slide-1">
-    <section class="slide-content"><h1 id="can-app">can.App</h1>
+    <section class="slide-content"><h1 id="single-page-applications">Single Page Applications</h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
+    <section class="slide-content"><h2 id="an-intro-slide">An intro slide</h2>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-3">
+    <section class="slide-content"><h1 id="can-application">can.Application</h1>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-4">
+    <section class="slide-content"><h2 id="status">Status</h2>
+<h4 id="the-good">The good</h4>
+<ul>
+<li>Splitting your application into small components<ul>
+<li>Components</li>
+<li>Demo page</li>
+<li>Tests</li>
+<li>Documentation</li>
+</ul>
+</li>
+<li>NPM</li>
+</ul>
+<h4 id="the-bad">The bad</h4>
+<ul>
+<li>How to compose those components into an application?</li>
+<li>Application state not a &quot;first class citizen&quot;</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-5">
+    <section class="slide-content"><h2 id="application-routing">Application routing</h2>
+<h2 id="the-lazy-way">The lazy way</h2>
+<pre><code class="lang-javascript"><span class="keyword">const</span> renderer = can.view.stache(<span class="string">'&lt;app-post post="{post}"&gt;&lt;/app-post&gt;'</span>);
+
+router(<span class="string">'/posts/:id'</span>, data =&gt; {
+  Post.findOne({
+    id: data.id
+  }).then(post =&gt; $(<span class="string">'#main'</span>).html(renderer({ post })));
+});</code></pre>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-6">
+    <section class="slide-content"><h2 id="why-lazy-">Why lazy?</h2>
+<h3 id="the-good">The good</h3>
+<ul>
+<li>Easy to understand and set up</li>
+</ul>
+<h3 id="the-bad">The bad</h3>
+<ul>
+<li>Not bidirectional</li>
+<li>Route first development: You think about URL design instead of application state.</li>
+<li>Application state (and rendering) is tied to route handlers.</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-7">
+    <section class="slide-content"><h2 id="can-appstate">can.AppState</h2>
+<p>A global application state object</p>
+<pre><code class="lang-javascript">export <span class="keyword">default</span> <span class="keyword">new</span> can.AppState({
+  define: {
+    post: {
+      set(id) {
+        <span class="keyword">return</span> Post.findOne({ id });
+      },
+
+      serialize() {
+        <span class="keyword">return</span> <span class="keyword">this</span>.attr(<span class="string">'post'</span>).value.attr(<span class="string">'id'</span>);
+      }
+    }
+  }
+});</code></pre>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-8">
+    <section class="slide-content"><h2 id="-can-route-"><code>&lt;can-route&gt;</code></h2>
+<pre><code>&lt;can-route url=&quot;&quot;&gt;
+  &lt;a href=&quot;post/1&quot;&gt;A blog post&lt;/a&gt;
+&lt;/can-route&gt;
+&lt;can-route url=&quot;posts/:id&quot;&gt;
+  {{#if post.isPending}}
+    &lt;app-loader&gt;Loading blog post&lt;/app-loader&gt;
+  {{else}}
+    &lt;app-post post=&quot;{post.value}&quot;&gt;&lt;/app-post&gt;
+  {{/if}}
+&lt;/can-route&gt;</code></pre>
+<p>Pro: Separate application state
+Con: Route definition in template</p>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-9">
+    <section class="slide-content"><h2 id="route-matching-problems">Route matching problems</h2>
+<pre><code class="lang-javascript">can.route(<span class="string">':page/:id'</span>, { page: <span class="string">'index'</span> });
+
+<span class="keyword">if</span>(can.route.attr(<span class="string">'page'</span>) === <span class="string">'index'</span>) {
+
+} <span class="keyword">else</span> <span class="keyword">if</span>(can.route.attr(<span class="string">'page'</span>) === <span class="string">'blog'</span>) {
+
+}</code></pre>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-10">
+    <section class="slide-content"><h2 id="-can-state-"><code>&lt;can-state&gt;</code></h2>
+<pre><code>&lt;div class=&quot;container&quot;&gt;
+  &lt;can-state route=&quot;&quot; can-animate-out=&quot;slideRight&quot;&gt;
+    &lt;a href=&quot;post/1&quot;&gt;A blog post&lt;/a&gt;
+  &lt;/can-route&gt;
+  &lt;can-state page=&quot;post&quot; can-animate-in=&quot;slideLeft&quot; can-animate-out=&quot;slideRight&quot;&gt;
+    &lt;app-post post=&quot;{id}&quot;&gt;&lt;/app-post&gt;
+  &lt;/can-route&gt;
+&lt;/div&gt;</code></pre>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-11">
     <section class="slide-content"><h2 id="templating">Templating</h2>
 <h3 id="stache-mustache">Stache / Mustache</h3>
 <h4 id="the-good">The Good</h4>
@@ -593,7 +704,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-3">
+  <div class="slide hidden" id="slide-12">
     <section class="slide-content"><h3 id="stache-mustache">Stache / Mustache</h3>
 <h4 id="the-bad">The Bad</h4>
 <ol>
@@ -610,7 +721,7 @@ pre {
 </ol>
 </section>
   </div>
-  <div class="slide hidden" id="slide-4">
+  <div class="slide hidden" id="slide-13">
     <section class="slide-content"><h3 id="html-based-templates">HTML-based Templates</h3>
 <h4 id="the-good">The Good</h4>
 <ul>
@@ -625,7 +736,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-5">
+  <div class="slide hidden" id="slide-14">
     <section class="slide-content"><h3 id="-key-"><code>{{key}}</code></h3>
 <ul>
 <li><code>{{key}}</code> - Angular</li>
@@ -633,7 +744,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-6">
+  <div class="slide hidden" id="slide-15">
     <section class="slide-content"><h3 id="-each-"><code>{{#each}}</code></h3>
 <h4 id="them">Them</h4>
 <ul>
@@ -651,7 +762,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-7">
+  <div class="slide hidden" id="slide-16">
     <section class="slide-content"><h3 id="-if-if-"><code>{{#if}} / {{^if}}</code></h3>
 <ul>
 <li><code>if=&quot;expr&quot;</code> - Same problem as repeat</li>
@@ -664,7 +775,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-8">
+  <div class="slide hidden" id="slide-17">
     <section class="slide-content"><h3 id="exporting-component-s-viewmodel">Exporting component&#39;s viewModel</h3>
 <p><a href="https://github.com/bitovi/canjs/issues/1362">Issue #1362</a></p>
 <ul>
@@ -682,7 +793,7 @@ pre {
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-9">
+  <div class="slide hidden" id="slide-18">
     <section class="slide-content"></section>
   </div>
 
