Update generated html.

--- a/index.html
+++ b/index.html
@@ -588,9 +588,9 @@ pre {
     <section class="slide-content"><h2 id="problems-to-solve">Problems to Solve</h2>
 <ul>
 <li>Bootstrapping Application</li>
-<li>Make routing easier</li>
+<li>Make routing / application state clearer</li>
 <li>Transitioning between pages</li>
-<li>Allow Components to be Written into DOM</li>
+<li>Making bootstrapping more declarative</li>
 </ul>
 </section>
   </div>
@@ -853,8 +853,7 @@ Con: Route definition in template</p>
 </section>
   </div>
   <div class="slide hidden" id="slide-22">
-    <section class="slide-content"><h2 id="implementing-templates">Implementing Templates</h2>
-</section>
+    <section class="slide-content"></section>
   </div>
 
 
